# beep

./: .coderabbit.yaml  .gitignore  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  SPEC.md  build.sh
.github/workflows/: release.yml
crates/beep/: Cargo.toml
crates/beep-core/: Cargo.toml
crates/beep-core/src/: client.rs  history.rs  http_parser.rs  inspector.rs  lib.rs  models.rs
crates/beep-core/src/http_parser/: edit.rs  mod.rs  parse.rs  serialize.rs  tests.rs  types.rs
crates/beep-gui/: package.json  vite.config.js
crates/beep-gui/src/: app.d.ts  app.html
crates/beep-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/beep-gui/src-tauri/capabilities/: default.json
crates/beep-gui/src-tauri/icons/: icon.icns
crates/beep-gui/src-tauri/src/: lib.rs  main.rs  models.rs
crates/beep-gui/src-tauri/src/commands/: http.rs
crates/beep-gui/src/lib/: app-state.svelte.ts  events.svelte.ts  hotkeys.svelte.ts  http-file-utils.ts  toast.svelte.ts  types.ts
crates/beep-gui/src/lib/components/: CodeEditor.svelte  FileEditor.svelte  FileOverview.svelte  FileVariablesPanel.svelte  FileViewer.svelte  HistorySidebar.svelte  MainEditorToolbar.svelte  MainEditorViewer.svelte  MethodBadge.svelte  NewRequestPopup.svelte  ProjectSidebar.svelte  RequestForm.svelte  ResponseView.svelte  StatusBadge.svelte  StatusBar.svelte  TabBar.svelte  TabSwitcherPopup.svelte  TitleBar.svelte  Toast.svelte  XmlTreeNode.svelte  XmlTreeView.svelte
crates/beep-gui/src/lib/components/buttons/: AddRowButton.svelte  DeleteRowButton.svelte
crates/beep-gui/src/lib/components/icons/: Unmaximize.svelte
crates/beep-gui/src/lib/components/modals/: AboutDialog.svelte
crates/beep-gui/src/lib/components/styles/: monokai.ts
crates/beep-gui/src/lib/components/tabs/: RequestAuthTab.svelte  RequestBodyTab.svelte  RequestHeadersTab.svelte  RequestMultipartTab.svelte  RequestParamsTab.svelte  (+5 more)
crates/beep-gui/src/routes/: +layout.svelte  +page.svelte  layout.css  style.css
crates/beep-tui/: Cargo.toml
crates/beep-tui/src/: main.rs  tui.rs
crates/beep/src/: commands.rs  main.rs
examples/: basic.http
(+1 files in other folders)
