[package]
name = "beep-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Beep core"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ureq = "3.3.0"
http = "1.4"
flate2 = "1.1"
brotli = "7.0"
