[package]
name = "beep-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Beep core"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "charset", "brotli", "gzip", "deflate", "zstd", "http2"] }
http = "1.4"
tokio = { version = "1", features = ["fs"] }
